Home background has now a big drawing and CSS animation with a centered menu band.

--- a/user/themes/quark-open-publishing/css/custom.css
+++ b/user/themes/quark-open-publishing/css/custom.css
@@ -1,13 +1,229 @@
+/* cabin-sketch-regular - latin */
+@font-face {
+  font-family: 'Cabin Sketch';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/cabin-sketch-v13-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Cabin Sketch Regular'), local('CabinSketch-Regular'),
+       url('../fonts/cabin-sketch-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/cabin-sketch-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/cabin-sketch-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/cabin-sketch-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/cabin-sketch-v13-latin-regular.svg#CabinSketch') format('svg'); /* Legacy iOS */
+}
+
+/* cabin-sketch-700 - latin */
+@font-face {
+  font-family: 'Cabin Sketch';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/cabin-sketch-v13-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Cabin Sketch Bold'), local('CabinSketch-Bold'),
+       url('../fonts/cabin-sketch-v13-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/cabin-sketch-v13-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/cabin-sketch-v13-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/cabin-sketch-v13-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/cabin-sketch-v13-latin-700.svg#CabinSketch') format('svg'); /* Legacy iOS */
+}
+
+@keyframes greeting {
+  0% {
+    -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
+    -ms-filter: blur(0px);
+  }
+  10% {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+  }
+  20% {
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+  }
+  30% {
+    -webkit-filter: blur(6px);
+    -moz-filter: blur(6px);
+    -o-filter: blur(6px);
+    -ms-filter: blur(6px);
+  }
+  40% {
+    -webkit-filter: blur(8px);
+    -moz-filter: blur(8px);
+    -o-filter: blur(8px);
+    -ms-filter: blur(8px);
+  }
+  50% {
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -o-filter: blur(10px);
+    -ms-filter: blur(10px);
+  }
+  60% {
+    -webkit-filter: blur(8px);
+    -moz-filter: blur(8px);
+    -o-filter: blur(8px);
+    -ms-filter: blur(8px);
+  }
+  70% {
+    -webkit-filter: blur(6px);
+    -moz-filter: blur(6px);
+    -o-filter: blur(6px);
+    -ms-filter: blur(6px);
+  }
+  80% {
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+  }
+  90% {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+  }
+  100% {
+    -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
+    -ms-filter: blur(0px);
+    content: '';
+  }
+}
+
+@keyframes greeting_text {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0.6;
+  }
+  20% {
+    opacity: 0.8;
+  }
+  30% {
+    opacity: 1.0;
+  }
+  40% {
+    opacity: 1.0;
+  }
+  50% {
+    opacity: 1.0;
+  }
+  60% {
+    opacity: 1.0;
+  }
+  70% {
+    opacity: 1.0;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  90% {
+    opacity: 0.6;
+  }
+  95% {
+    opacity: 0.4;
+  }
+  98% {
+    opacity: 0.2;
+  }
+  99% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 0.0;
+  }
+}
+
+@keyframes home_band {
+  0% {
+    visibility: hidden;
+    top: 3000px;
+  }
+  100% {
+    visibility: visible;
+    top: 60vh;
+    z-index: 999;
+  }
+}
+
 body.home {
+  overflow: hidden;
+}
+
+body.home:before {
+  content: '';
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
   background: url(../images/suli-25p.jpg) no-repeat center center fixed;
   -webkit-background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   -o-background-size: 100% 100%;
   background-size: 100% 100%;
+  top: 0;
+  left: 0;
+
+  animation-name: greeting;
+  animation-duration: 15s;
+  animation-timing-function: ease-in;
+  /*animation-fill-mode: forwards;*/
+}
+
+body.home:after {
+  content: 'Üdvözöljük az Esterházy Iskola \A honlapján';
+  white-space: pre-wrap;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: "Cabin Sketch", serif;
+  font-size: 56px;
+  font-weight: 700;
+  color: black;
+  background-color: none;
+  padding: 10px 10px 10px 10px;
+
+  animation-name: greeting_text;
+  animation-duration: 15s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
 }
 
 body.home #footer {
   display: none;
+}
+
+div.home-band-wrapper {
+  position: absolute;
+  top: 200px;
+  position: absolute;
+  top: 60vh;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  width: 100vw;
+  left: 0;
+  background-color: white;
+  opacity: 0.7;
+  text-align: center;
+
+  animation-name: home_band;
+  animation-duration: 15s;
+  /*animation-timing-function: ease-in;*/
+  animation-fill-mode: forwards;
+  visibility: hidden;
+}
+
+ul.home-band {
+  list-style-type: none;
 }
 
 .center img {
