--- a/user/themes/quark-open-publishing/css/custom.css
+++ b/user/themes/quark-open-publishing/css/custom.css
@@ -1,3 +1,6 @@
+.bg-gray {
+  background-color: #F9F3E0 !important;
+}
 /* cabin-sketch-regular - latin */
 @font-face {
   font-family: 'Cabin Sketch';
@@ -28,70 +31,72 @@
 
 @keyframes greeting {
   0% {
-    -webkit-filter: blur(0px);
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
-    -ms-filter: blur(0px);
+    -webkit-filter: brightness(100%);
+    -moz-filter: brightness(100%);
+    -o-filter: brightness(100%);
+    -ms-filter: brightness(100%);
   }
-  10% {
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
-    -ms-filter: blur(2px);
+  
+10% {
+    -webkit-filter: brightness(60%);
+    -moz-filter: brightness(60%);
+    -o-filter: brightness(60%);
+    -ms-filter: brightness(60%);
   }
   20% {
-    -webkit-filter: blur(4px);
-    -moz-filter: blur(4px);
-    -o-filter: blur(4px);
-    -ms-filter: blur(4px);
+    -webkit-filter: brightness(10%);
+    -moz-filter: brightness(10%);
+    -o-filter: brightness(10%);
+    -ms-filter: brightness(10%);
   }
   30% {
-    -webkit-filter: blur(6px);
-    -moz-filter: blur(6px);
-    -o-filter: blur(6px);
-    -ms-filter: blur(6px);
+    -webkit-filter: brightness(5%);
+    -moz-filter: brightness(5%);
+    -o-filter: brightness(5%);
+    -ms-filter: brightness(5%);
   }
   40% {
-    -webkit-filter: blur(8px);
-    -moz-filter: blur(8px);
-    -o-filter: blur(8px);
-    -ms-filter: blur(8px);
+    -webkit-filter: brightness(5%);
+    -moz-filter: brightness(5%);
+    -o-filter: brightness(5%);
+    -ms-filter: brightness(5%);
   }
   50% {
-    -webkit-filter: blur(10px);
-    -moz-filter: blur(10px);
-    -o-filter: blur(10px);
-    -ms-filter: blur(10px);
+    -webkit-filter: brightness(5%);
+    -moz-filter: brightness(5%);
+    -o-filter: brightness(5%);
+    -ms-filter: brightness(5%);
   }
   60% {
-    -webkit-filter: blur(8px);
-    -moz-filter: blur(8px);
-    -o-filter: blur(8px);
-    -ms-filter: blur(8px);
+    -webkit-filter: brightness(5%);
+    -moz-filter: brightness(5%);
+    -o-filter: brightness(5%);
+    -ms-filter: brightness(5%);
   }
   70% {
-    -webkit-filter: blur(6px);
-    -moz-filter: blur(6px);
-    -o-filter: blur(6px);
-    -ms-filter: blur(6px);
+    -webkit-filter: brightness(5%);
+    -moz-filter: brightness(5%);
+    -o-filter: brightness(5%);
+    -ms-filter: brightness(5%);
   }
   80% {
-    -webkit-filter: blur(4px);
-    -moz-filter: blur(4px);
-    -o-filter: blur(4px);
-    -ms-filter: blur(4px);
+    -webkit-filter: brightness(10%);
+    -moz-filter: brightness(10%);
+    -o-filter: brightness(10%);
+    -ms-filter: brightness(10%);
   }
   90% {
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
-    -ms-filter: blur(2px);
+    -webkit-filter: brightness(60%);
+    -moz-filter: brightness(60%);
+    -o-filter: brightness(60%);
+    -ms-filter: brightness(60%);
   }
+
   100% {
-    -webkit-filter: blur(0px);
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
-    -ms-filter: blur(0px);
+    -webkit-filter: brightness(100%);
+    -moz-filter: brightness(100%);
+    -o-filter: brightness(100%);
+    -ms-filter: brightness(100%);
     content: '';
   }
 }
@@ -144,11 +149,12 @@
 @keyframes home_band {
   0% {
     visibility: hidden;
-    top: 3000px;
+    left: -3000px;
   }
   100% {
     visibility: visible;
     top: 60vh;
+    left: 0px;
     z-index: 999;
   }
 }
@@ -171,13 +177,13 @@ body.home:before {
   left: 0;
 
   animation-name: greeting;
-  animation-duration: 15s;
+  animation-duration: 5s;
   animation-timing-function: ease-in;
   /*animation-fill-mode: forwards;*/
 }
 
 body.home:after {
-  content: 'Üdvözöljük az Esterházy Iskola \A honlapján';
+  content: 'Üdvözöljük az Esterházy Iskola \A honlapján!';
   white-space: pre-wrap;
   margin: 0 auto;
   position: absolute;
@@ -188,12 +194,12 @@ body.home:after {
   font-family: "Cabin Sketch", serif;
   font-size: 56px;
   font-weight: 700;
-  color: black;
+  color: Khaki;
   background-color: none;
   padding: 10px 10px 10px 10px;
 
   animation-name: greeting_text;
-  animation-duration: 15s;
+  animation-duration: 5s;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
 }
@@ -202,28 +208,79 @@ body.home #footer {
   display: none;
 }
 
+/*body.home #footer {
+  background-image: none !important;
+  background: none !important;
+}
+
+body.home #footer p {
+  display: none;
+}
+
+body.home #footer:after {
+  content: 'Email: \A Telefonszám: ';
+  white-space: pre-wrap;
+  color: black;
+  text-shadow: 2px 2px white;
+  font-size: large;
+}*/
+
 div.home-band-wrapper {
   position: absolute;
   top: 200px;
   position: absolute;
-  top: 60vh;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  top: 58vh !important;
   width: 100vw;
   left: 0;
-  background-color: white;
-  opacity: 0.7;
   text-align: center;
+  /*font-family: "Cabin Sketch";*/
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',sans-serif;
+  /*border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: white;
+  opacity: 0.7;*/
 
   animation-name: home_band;
-  animation-duration: 15s;
-  /*animation-timing-function: ease-in;*/
+  animation-duration: 3s;
   animation-fill-mode: forwards;
   visibility: hidden;
+  animation-timing-function: ease-in;
 }
 
-ul.home-band {
+div.home-band-wrapper a {
+  color: black;
+  text-decoration: none;
+}
+
+div.home-footer {
+  width: 100%;
+  top: 90vh !important;
+  position: absolute;
+}
+
+ul.home-band,
+div.home-footer ul {
   list-style-type: none;
+}
+
+ul.home-band li, 
+div.home-footer ul li {
+  float: left;
+  color: black;
+}
+
+div.home-footer ul li a {
+  color: black;
+  text-decoration: none;
+}
+
+ul.home-band li:before,
+div.home-footer ul li:before {
+  content: ' | ';
+}
+
+.header-transparent #header:not(.scrolled) {
+  background: rgba(255,255,255,0.4);
 }
 
 .center img {
