[FEATURE] Greeting page display depends on the _seen_ cookie existence.

--- a/user/themes/quark-open-publishing/css/custom.css
+++ b/user/themes/quark-open-publishing/css/custom.css
@@ -204,6 +204,15 @@ body.home:after {
   animation-fill-mode: forwards;
 }
 
+body.notransition:before,
+body.notransition:after {
+  animation: none !important;
+  transition: none !important;
+  filter: none !important;
+  opacity: 1.0 !important;
+  content: '';
+}
+
 body.home #footer {
   display: none;
 }
