--- a/user/themes/quark-open-publishing/templates/partials/scripts.html.twig
+++ b/user/themes/quark-open-publishing/templates/partials/scripts.html.twig
@@ -1,1 +1,9 @@
 <!--- Your global JavaScript code can go here -->
+<script>
+  if (getCookie("seen")===null) {
+    setCookie("seen", 1, 1);
+  }
+  else {
+    document.getElementById("top").classList.add("notransition");
+  }
+</script>
