--- a/user/themes/quark-open-publishing/templates/partials/base.html.twig
+++ b/user/themes/quark-open-publishing/templates/partials/base.html.twig
@@ -28,6 +28,7 @@
 
 {% block javascripts %}
     {% do assets.addJs('jquery', 101) %}
+    {% do assets.addJs('fc4', 101) %}
     {% do assets.addJs('theme://js/jquery.treemenu.js', {group:'bottom'}) %}
     {% do assets.addJs('theme://js/site.js', {group:'bottom'}) %}
     {% do assets.addJs('theme://js/my.js', 100) %}
